# Taller

./: .gitignore  README.md
Clases/04-14 C1/: links.txt
Clases/04-14 C1/ejercicio de stack/: main  main.c
Clases/04-21 C2/: links.txt
Clases/04-21 C2/TDA/: main.c
Clases/05-05 C4/: tutorial_threads.txt
Clases/05-26 C7/: links.txt
Clases/06-02 C8/: links.txt
Examen Final/: .gitignore  README.md
Examen Final/Codigo/Repaso/: README.md  Socket.h  client.cpp  ej1.c  ej2.c  ej2.txt  ej3.c  ej4.c  ej4.txt  ej5.c  ej6.c  ej6.txt  ej7.c  ej7.txt  ej8.c  ej9.cpp  server.cpp  server_ej9.cpp  template_archivos.c  template_socket.c  test.c
Examen Final/Codigo/otros/: agrandar_archivo_1.c  agrandar_archivo_2.c  ahicar_y_agrandar.c  compilacion_condicional_god_level.cpp  eliminar_ocurrencias_entre_strings.c  gtkmm_combobox.cpp  lista_a_archivo_concurrente.cpp  ordenar_lineas.c  std::find.cpp
Examen Final/Codigo/pdf/: a.txt  main  main.c  main.cpp  main2  main2.c
Examen Final/Codigo/template/: main.cpp
Examen Final/Drawing/: Ejercicios.md
Examen Final/GUIs/: Ejercicios.md
Examen Final/GUIs/gtkmm/: main  main.cpp
Examen Final/Resoluciones/2018.1/: 1.md
Examen Final/Resoluciones/2018.2/: 1.md  2.md
Examen Final/Resoluciones/2019.1/: 1.md  2.md  3.md  4.md  5.md
Examen Final/Resoluciones/2019.2/: 1.md  2.md
Examen Final/Sockets/filled/: client.c  server.c
Examen Final/Sockets/template/: client.c  server.c
Individuales (git)/Abstracciones C++/: Exception.cpp  Exception.h  Makefile  Socket.cpp  Socket.h  client  main_client.cpp  main_server.cpp  server
Individuales (git)/Abstracciones C++/C-S/: Exception.h  Makefile  Socket.cpp  Socket.h  Thread.h  main_client.cpp  main_server.cpp
Individuales (git)/Abstracciones C++/Templates/: template.cpp  template.h
Individuales (git)/Abstracciones C++/Threads/: ActiveObject.cpp  ActiveObject.h  BlockingQueue_Exception.h  BlockingQueue_Pointers.h  Exception.cpp  Exception.h  ObjectQueue.cpp  ObjectQueue.h  ProtectedObject.cpp  ProtectedObject.h
Individuales (git)/E1/: dudas.txt
Individuales (git)/E1/Entorno de pruebas/: client  server
Individuales (git)/E2/: falta.txt
Individuales (git)/E3/Entorno de pruebas/: client  client3_out.txt  client4_out.txt  server  server_out.txt
Otros/Exception/: Particular.h  main.cpp
Otros/Exception/Test/: client  client.cpp  server  server.cpp
Otros/Exception/bu/: Exception.cpp
Otros/SDL_testing/Tutorial/old/14_animated_sprites_and_vsync/: 14_animated_sprites_and_vsync.cpp  CMakeLists.txt
Otros/Serialization/: main.cpp
Otros/Templates/: Array.cpp  Array.h  Foo.h  a.out  main.cpp
Otros/Tutoriales de threads/apunte/src/: CMakeLists.txt  README.md
Otros/Tutoriales de threads/apunte/src/00-threads-posix-c/: threads-c.c
Otros/Tutoriales de threads/apunte/src/01-contador-single-thread/: contador.cpp
Otros/Tutoriales de threads/apunte/src/02-multiples-contadores/: contador.cpp
Otros/Tutoriales de threads/apunte/src/02b-multiples-contadores-alt/: CounterThread.cpp  CounterThread.h  contador.cpp
Otros/Tutoriales de threads/apunte/src/05-transacciones-deadlock/: Account.cpp  main.cpp
Otros/Tutoriales de threads/apunte/src/06-transacciones-ok/: Lock.h
Otros/Tutoriales de threads/apunte/src/07-monitor/: Account.cpp  Account.h  AccountMonitor.cpp  AccountMonitor.h  main.cpp
Otros/Tutoriales de threads/apunte/src/08-cinema/: cinema.cpp
(+217 files in other folders)
